# BlueprintValidation

./: .gitignore  LICENSE  NEXT_SESSION_CONTEXT.md  OPS_MEMORY.md  PLATFORM_CONTEXT.md  README.md  pyproject.toml  vast-onstart-20260314.sh
.github/workflows/: ci.yaml  docker-publish.yaml
configs/: cheap_no_teleop_directional.yaml  example_validation.yaml  interiorgs_kitchen.yaml  interiorgs_kitchen_0787.cloud.yaml  interiorgs_kitchen_0787.yaml  investor_grade_policy_uplift_openvla.yaml  low_cost_polaris_pilot.yaml  opportunity_handoff.example.json  policy_uplift_first_dreamzero_evalfirst.yaml  qualified_opportunity_validation.yaml  same_facility_policy_uplift_dreamzero.yaml  same_facility_policy_uplift_openvla.cloud.yaml  same_facility_policy_uplift_openvla.yaml  wm_only_pilot.cloud.yaml  wm_only_strict_fresh.cloud.yaml
configs/benchmarks/: facility_a.fixed_claim.json  facility_b.fixed_claim.json  facility_c.fixed_claim.json
configs/camera_paths/: facility_a_book_shelf_locked.json  manipulation_closeup_arc.json  robot_height_orbit.json  robot_height_sweep.json
docker/: Dockerfile  runpod.Dockerfile
docs/: future_stitched_pipeline_guide.md  low_cost_polaris_pilot.md  no_new_data_scaling_playbook.md  polaris_outer_loop.md  qualified_opportunity_handoff.md  remote_isaac_teleop_setup.md  scene_builder.md  teleop_isaac_workflow.md  vision_pro_sample_client_hook.md  vision_pro_teleop_setup.md
reports/: action_boost_debug_vm_20260301_postmortem.md  non_gpu_audit_20260306.md  scan_only_capture_research_20260307.md
scripts/: b2_checkpoint_sync.sh  bootstrap_isaac_teleop_runtime.sh  build_runtime_snapshot.sh  cloud_launch.sh  cloud_prepare_0787.sh  cloud_prepare_same_facility_claim.sh  download_models.sh  generate_pilot_config.py  pre_gpu_audit.sh  prepare_cpu_audit_fixture.py  provision_same_facility_claim_runtime.sh  run_isaac_record_teleop.sh  run_vision_pro_relay.sh  run_vision_pro_teleop_stack.sh  run_wm_only_pilot.sh  run_wm_only_strict.sh  runpod_launch.sh  runtime_env.example  setup_first_data.sh  ssh_isaac_record_teleop.sh  ssh_vision_pro_record_teleop.sh  stage1_vlm_clip_qa.py  transcode_mp4_h264.py  vast_checkpoint_sync.sh  vast_checkpoint_watch.sh  vast_pause_safe.sh  vast_resume_safe.sh
tests/: conftest.py  test_action_overlay.py  test_camera_paths.py  test_camera_quality.py  test_claim_benchmark.py  test_claim_portfolio.py  test_claim_portfolio_report.py  test_claim_protocol.py  test_cli_geometry_canary.py  test_cli_help_boundary.py  test_cli_hosted_session.py  test_cli_post_s1_audit.py  test_cli_preflight.py  test_cli_repro_guardrails.py  test_cli_surface.py  test_common.py  test_config.py  test_config_dataset_quality.py  test_config_manipulation.py  test_cosmos_runner.py  test_dataset_builder_quality.py  test_dataset_builder_strict_video.py  test_dependency_contract.py  test_docker_contract.py  test_dreamdojo_finetune.py  test_dreamzero_adapter.py  test_generate_pilot_config.py  test_gradio_launcher.py  test_gsplat_renderer.py  test_hosted_session.py  test_isaac_first_pipeline.py  test_judge_audit.py  test_manifest_resolution.py  test_manifest_validation.py  test_manipulation_camera_paths.py  test_metrics.py  test_native_teacher.py  test_neoverse_bootstrap_scripts.py  test_neoverse_runner_wrapper.py  test_neoverse_runtime_client.py  (+83 more)
(+168 files in other folders)
