[project]
name = "blueprint-validation"
version = "0.1.0"
description = "NeoVerse site-world runtime validation and export toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Blueprint Team"}]
keywords = [
    "neoverse",
    "site-world",
    "runtime",
    "robotics",
    "validation",
    "rollouts",
]

dependencies = [
    "blueprint-contracts @ git+https://github.com/ognjhunt/BlueprintContracts.git@2933580",
    "click>=8.0",
    "pyyaml>=6.0",
    "fastapi>=0.115.0",
    "numpy>=1.24.0,<2",
    "uvicorn>=0.30.0",
    "websockets>=15.0.0",
]

[project.optional-dependencies]
vision = [
    "opencv-python>=4.8.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.6.0",
    "mypy>=1.8.0",
]

[project.scripts]
blueprint-validate = "blueprint_validation.cli:main"
blueprint-neoverse-runtime = "blueprint_validation.neoverse_runtime_service:main"
blueprint-neoverse-smoke-runtime = "blueprint_validation.smoke_contract_runtime_service:main"

[project.urls]
Repository = "https://github.com/ognjhunt/BlueprintValidation"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/blueprint_validation"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers"]
markers = [
    "integration: marks integration tests",
]
